style.css
/* ... */
.harry {
    position: absolute;
    text-align: center;
    width: 75px;
    height: 100px;
    left: 85%;
    top: 37.5%;
    animation: harryanim 2s linear infinite;
    border: 4px solid white;
    box-shadow: 0 0 15px white;
}
.harry:hover {
    cursor:pointer;
}
.winston {
    position: absolute;
    text-align: center;
    width: 75px;
    height: 100px;
    left: 95%;
    top: 37.5%;
    animation: winstonanim 2s linear infinite;
    border: 4px solid white;
    box-shadow: 0 0 15px white;
}
.winston:hover {
    cursor:pointer;
}
@keyframes harryanim {
    0% {
        left: 0%;
        z-index: 2;
        width: 75px;
        height: 100px;
    }
    25% {
        left: 12.5%;
        z-index: 2;
        width: 90px;
        height: 120px;
    }
    50% {
        left: 25%;
        z-index: 1;
        width: 75px;
        height: 100px;
    }
    75% {
        left: 12.5%;
        z-index: -1;
        width: 55px;
        height: 75px;
    }
    100% {
        left: 0%;
        z-index: 0;
        width: 75px;
        height: 100px;
    }
}
@keyframes winstonanim {
    0% {
        left: 25%;
        z-index: 0;
        width: 75px;
        height: 100px;
    }
    25% {
        left: 12.5%;
        z-index: -1;
        width: 55px;
        height: 75px;
    }
    50% {
        left: 0%;
        z-index: 1;
        width: 75px;
        height: 100px;
    }
    75% {
        left: 12.5%;
        z-index: 2;
        width: 90px;
        height: 120px;
    }
    100% {
        left: 25%;
        z-index: 1;
        width: 75px;
        height: 100px;
    }
}

.up16 {
    width: 70px;
    height: 70px;
    border-radius: 25px;
    position: absolute;
    left: 70%;
    bottom: 8.5%;
    text-align: center;
    border: 5px solid rgb(100, 100, 255);
    background-color: rgb(25, 25, 50);
    box-shadow: 0 0 15px rgb(100, 1000, 255);
    transform: translate(-50%, -50%);
    animation: spin 10s linear infinite;
}
.up16:hover {
    background-color: rgb(75, 75, 150);
    box-shadow: 0 0 15px rgb(100, 100, 255), 0 0 25px rgb(100, 100, 255);
    cursor: pointer;
}
.up16D {
    position: absolute;
    width: 100%;
    left: 50%;
    top: 20%;
    font-size: 170%;
    color: white;
    text-align: center;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    -webkit-text-stroke: 1px white;
    text-shadow: 0 0 5px white;
    transform: translate(-50%, -50%);
}
.up16C {
    position: absolute;
    width: 100%;
    left: 72.5%;
    bottom: 1%;
    font-size: 150%;
    color: white;
    text-align: center;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    -webkit-text-stroke: 1px white;
    text-shadow: 0 0 5px white;
    transform: translate(-50%, -50%);
}
.duck {
    width: 120px;
    height: 120px;
    padding: 0px;
    position: absolute;
    left: 50%;
    top: 50%;
    text-align: center;
    transform: translate(-45%, -35%);
    box-shadow: 0 0 50px rgb(100, 100, 255);
    background-color: rgb(0,0,0);
    border: 2px solid rgb(100, 100, 255);
    border-radius: 50%;
    -webkit-user-drag: none; 
    -khtml-user-drag: none; 
    -moz-user-drag: none; 
    -o-user-drag: none; 
}
.duckParticle {
    width: 15px;
    height: 15px;
    position: absolute;
    text-align: center;
    border: .5px solid rgb(100,100,255);
    background-color: black;
    box-shadow: 0 0 3px rgb(100,100,255);
    transform: translate(-50%, -50%);
    animation: spin 1s linear infinite;
    user-select: none;
    z-index: -3;
}

.up17 {
    width: 70px;
    height: 70px;
    border-radius: 25px;
    position: absolute;
    left: 80%;
    bottom: 8.5%;
    text-align: center;
    border: 5px solid rgb(200, 100, 255);
    background-color: rgb(40, 25, 50);
    box-shadow: 0 0 15px rgb(200, 1000, 255);
    transform: translate(-50%, -50%);
    animation: spin 10s linear infinite;
}
.up17:hover {
    background-color: rgb(125, 75, 150);
    box-shadow: 0 0 15px rgb(200, 100, 255), 0 0 25px rgb(200, 100, 255);
    cursor: pointer;
}
.up17D {
    position: absolute;
    width: 100%;
    left: 50%;
    top: 20%;
    font-size: 170%;
    color: white;
    text-align: center;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    -webkit-text-stroke: 1px white;
    text-shadow: 0 0 5px white;
    transform: translate(-50%, -50%);
}
.up17C {
    position: absolute;
    width: 100%;
    left: 82.5%;
    bottom: 1%;
    font-size: 150%;
    color: white;
    text-align: center;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    -webkit-text-stroke: 1px white;
    text-shadow: 0 0 5px white;
    transform: translate(-50%, -50%);
}
.galaxy {
    width: 200%;
    height: 200%;
    position: absolute;
    left: -50%;
    top: -50%;
    text-align: center;
    transform: translate(-50%, -50%);
    z-index: -10;
    opacity: .15;
    animation: spin 15s linear infinite;
}

.up18 {
    width: 70px;
    height: 70px;
    border-radius: 25px;
    position: absolute;
    left: 90%;
    bottom: 8.5%;
    text-align: center;
    border: 5px solid rgb(255, 0, 0);
    background-color: rgb(0, 0, 0);
    box-shadow: 0 0 50px rgb(255, 0, 0);
    transform: translate(-50%, -50%);
    animation: spin 10s linear infinite;
}
.up18:hover {
    background-color: rgb(255, 255, 255);
    box-shadow: 0 0 150px rgb(255, 0, 0), 0 0 50px rgb(255, 0, 0);
    cursor: pointer;
}
.up18D {
    position: absolute;
    width: 100%;
    left: 50%;
    top: 20%;
    font-size: 200%;
    color: white;
    text-align: center;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    -webkit-text-stroke: 1px white;
    text-shadow: 0 0 50px white;
    transform: translate(-50%, -50%);
    animation: jitter 0.05s linear infinite;
}
/* ... */

